fixed naming convention and spacing

--- a/demo/css/less/buttons.less
+++ b/demo/css/less/buttons.less
@@ -12,7 +12,6 @@
         display: block;
         position: absolute;
         left: 10px;
-        padding: 9px 0;
         font-weight: bold;
     }
 
